--- a/midterm/larry_kubin_miderm.html
+++ b/midterm/larry_kubin_miderm.html
@@ -129,9 +129,23 @@ $(document).ready(function () {
 <li><a href="#the-tidyverse-packages">The tidyverse packages</a><ul>
 <li><a href="#can-you-name-which-package-is-associated-with-each-task-below">1. Can you name which package is associated with each task below?</a></li>
 <li><a href="#now-can-you-name-two-functions-that-youve-used-from-each-package-that-you-listed-above-for-these-tasks">2. Now can you name two functions that you’ve used from each package that you listed above for these tasks?</a></li>
-<li><a href="#r-basics">R Basics</a></li>
-<li><a href="#something">Something</a></li>
 </ul></li>
+<li><a href="#r-basics">R Basics</a><ul>
+<li><a href="#fix-this-code-with-the-fewest-number-of-changes-possible-so-it-works">1. Fix this code with the fewest number of changes possible so it works:</a></li>
+<li><a href="#fix-this-code-so-it-works">2. Fix this code so it works:</a></li>
+<li><a href="#look-at-the-code-below-and-comment-on-what-happened-to-the-values-in-the-vector.">3. Look at the code below and comment on what happened to the values in the vector.</a></li>
+</ul></li>
+<li><a href="#data-import-export">Data Import / Export</a><ul>
+<li><a href="#import-rail_trail.txt">Import rail_trail.txt</a></li>
+<li><a href="#export-the-file-into-an-r-specific-format-and-reload-it.">Export the file into an R-specific format and reload it.</a></li>
+</ul></li>
+<li><a href="#visualization">Visualization</a><ul>
+<li><a href="#critique-this-graphic-give-only-three-examples-of-what-is-wrong-with-this-graphic.-be-concise.">1. Critique this graphic: give only three examples of what is wrong with this graphic. Be concise.</a></li>
+<li><a href="#reproduce-this-graphic-using-the-diamonds-data-set.">2. Reproduce this graphic using the diamonds data set.</a></li>
+<li><a href="#the-previous-graphic-is-not-very-useful.-we-can-make-it-much-more-useful-by-changing-one-thing-about-it.-make-the-change-and-plot-it-again.">3. The previous graphic is not very useful. We can make it much more useful by changing one thing about it. Make the change and plot it again.</a></li>
+</ul></li>
+<li><a href="#data-munging-and-wrangling-6-points">Data munging and wrangling (6 points)</a></li>
+<li><a href="#eda">EDA</a></li>
 </ul>
 </div>
 
@@ -172,32 +186,184 @@ $(document).ready(function () {
 </div>
 <div id="importingexporting-data-note-that-readrds-and-saverds-are-base-r-functions" class="section level4">
 <h4>Importing/exporting data (note that readRDS and saveRDS are base R functions)</h4>
+<p>read_csv(), read_delim()</p>
 </div>
 </div>
-<div id="r-basics" class="section level3">
-<h3>R Basics</h3>
-<div id="fix-this-code-with-the-fewest-number-of-changes-possible-so-it-works" class="section level4">
-<h4>1. Fix this code with the fewest number of changes possible so it works:</h4>
+</div>
+<div id="r-basics" class="section level2">
+<h2>R Basics</h2>
+<div id="fix-this-code-with-the-fewest-number-of-changes-possible-so-it-works" class="section level3">
+<h3>1. Fix this code with the fewest number of changes possible so it works:</h3>
 <p>The exclamation point was not a valid character in a variable name. A variable name can only consist of letters, numbers, and the dot and and underscore characters.</p>
 <pre class="r"><code>My_data.name___is.too00ooLong &lt;- c( 1 , 2 , 3 )</code></pre>
 </div>
-<div id="fix-this-code-so-it-works" class="section level4">
-<h4>2. Fix this code so it works:</h4>
+<div id="fix-this-code-so-it-works" class="section level3">
+<h3>2. Fix this code so it works:</h3>
 <p>One of the values was missing a quotation mark. Also, vectors are created using the c() function. There was a capital C used to create the function, which caused an error.</p>
 <pre class="r"><code>my_string &lt;- c('has', 'an', 'error', 'in', 'it')</code></pre>
 </div>
-<div id="look-at-the-code-below-and-comment-on-what-happened-to-the-values-in-the-vector." class="section level4">
-<h4>3. Look at the code below and comment on what happened to the values in the vector.</h4>
+<div id="look-at-the-code-below-and-comment-on-what-happened-to-the-values-in-the-vector." class="section level3">
+<h3>3. Look at the code below and comment on what happened to the values in the vector.</h3>
 <p>A vector can not have multiple types. Since a string is the most complex type in the vector, all values in the vector are coerced to strings.</p>
 <pre class="r"><code>my_vector &lt;- c(1, 2, '3', '4', 5)
 my_vector</code></pre>
 <pre><code>## [1] &quot;1&quot; &quot;2&quot; &quot;3&quot; &quot;4&quot; &quot;5&quot;</code></pre>
 </div>
 </div>
-<div id="something" class="section level3">
-<h3>Something</h3>
-<div id="section" class="section level4">
-<h4></h4>
+<div id="data-import-export" class="section level2">
+<h2>Data Import / Export</h2>
+<div id="import-rail_trail.txt" class="section level3">
+<h3>Import rail_trail.txt</h3>
+<pre class="r"><code>library(tidyverse)</code></pre>
+<pre><code>## Warning: package 'tidyverse' was built under R version 3.4.3</code></pre>
+<pre><code>## -- Attaching packages ------------------------------------------------------ tidyverse 1.2.1 --</code></pre>
+<pre><code>## v ggplot2 2.2.1     v purrr   0.2.4
+## v tibble  1.4.2     v dplyr   0.7.4
+## v tidyr   0.7.2     v stringr 1.2.0
+## v readr   1.1.1     v forcats 0.2.0</code></pre>
+<pre><code>## Warning: package 'tibble' was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package 'tidyr' was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package 'purrr' was built under R version 3.4.3</code></pre>
+<pre><code>## Warning: package 'dplyr' was built under R version 3.4.3</code></pre>
+<pre><code>## -- Conflicts --------------------------------------------------------- tidyverse_conflicts() --
+## x dplyr::filter() masks stats::filter()
+## x dplyr::lag()    masks stats::lag()</code></pre>
+<pre class="r"><code>rail_trail &lt;- read_delim(&quot;rail_trail.txt&quot;, &quot;|&quot;)</code></pre>
+<pre><code>## Parsed with column specification:
+## cols(
+##   hightemp = col_integer(),
+##   lowtemp = col_integer(),
+##   avgtemp = col_double(),
+##   spring = col_integer(),
+##   summer = col_integer(),
+##   fall = col_integer(),
+##   cloudcover = col_double(),
+##   precip = col_double(),
+##   volume = col_integer(),
+##   weekday = col_integer()
+## )</code></pre>
+<pre class="r"><code>glimpse(rail_trail)</code></pre>
+<pre><code>## Observations: 90
+## Variables: 10
+## $ hightemp   &lt;int&gt; 83, 73, 74, 95, 44, 69, 66, 66, 80, 79, 78, 65, 41,...
+## $ lowtemp    &lt;int&gt; 50, 49, 52, 61, 52, 54, 39, 38, 55, 45, 55, 48, 49,...
+## $ avgtemp    &lt;dbl&gt; 66.5, 61.0, 63.0, 78.0, 48.0, 61.5, 52.5, 52.0, 67....
+## $ spring     &lt;int&gt; 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, ...
+## $ summer     &lt;int&gt; 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, ...
+## $ fall       &lt;int&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, ...
+## $ cloudcover &lt;dbl&gt; 7.6, 6.3, 7.5, 2.6, 10.0, 6.6, 2.4, 0.0, 3.8, 4.1, ...
+## $ precip     &lt;dbl&gt; 0.00, 0.29, 0.32, 0.00, 0.14, 0.02, 0.00, 0.00, 0.0...
+## $ volume     &lt;int&gt; 501, 419, 397, 385, 200, 375, 417, 629, 533, 547, 4...
+## $ weekday    &lt;int&gt; 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, ...</code></pre>
+</div>
+<div id="export-the-file-into-an-r-specific-format-and-reload-it." class="section level3">
+<h3>Export the file into an R-specific format and reload it.</h3>
+<pre class="r"><code>saveRDS(rail_trail, file = &quot;rail_trail.rds&quot;)
+
+rail_trail_rds = readRDS(file = &quot;rail_trail.rds&quot;)
+
+glimpse(rail_trail_rds)</code></pre>
+<pre><code>## Observations: 90
+## Variables: 10
+## $ hightemp   &lt;int&gt; 83, 73, 74, 95, 44, 69, 66, 66, 80, 79, 78, 65, 41,...
+## $ lowtemp    &lt;int&gt; 50, 49, 52, 61, 52, 54, 39, 38, 55, 45, 55, 48, 49,...
+## $ avgtemp    &lt;dbl&gt; 66.5, 61.0, 63.0, 78.0, 48.0, 61.5, 52.5, 52.0, 67....
+## $ spring     &lt;int&gt; 0, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, ...
+## $ summer     &lt;int&gt; 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 1, ...
+## $ fall       &lt;int&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, ...
+## $ cloudcover &lt;dbl&gt; 7.6, 6.3, 7.5, 2.6, 10.0, 6.6, 2.4, 0.0, 3.8, 4.1, ...
+## $ precip     &lt;dbl&gt; 0.00, 0.29, 0.32, 0.00, 0.14, 0.02, 0.00, 0.00, 0.0...
+## $ volume     &lt;int&gt; 501, 419, 397, 385, 200, 375, 417, 629, 533, 547, 4...
+## $ weekday    &lt;int&gt; 1, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0, ...</code></pre>
+</div>
+</div>
+<div id="visualization" class="section level2">
+<h2>Visualization</h2>
+<div id="critique-this-graphic-give-only-three-examples-of-what-is-wrong-with-this-graphic.-be-concise." class="section level3">
+<h3>1. Critique this graphic: give only three examples of what is wrong with this graphic. Be concise.</h3>
+<div id="the-size-of-the-circles-is-not-proportional-to-the-percentage.-the-area-of-the-79-percent-circle-is-much-more-than-5x-the-size-of-the-16-percent-circle." class="section level4">
+<h4>1. The size of the circles is not proportional to the percentage. The area of the 79 percent circle is much more than 5x the size of the 16 percent circle.</h4>
+</div>
+<div id="side-by-side-circles-do-not-clearly-express-percentage-data.-this-could-have-been-easily-expressed-by-a-table-or-a-stacked-bar-chart." class="section level4">
+<h4>2. Side-by-side circles do not clearly express percentage data. This could have been easily expressed by a table or a stacked bar chart.</h4>
+</div>
+<div id="the-numbers-should-have-a-percentage-sign-next-to-them.-without-it-they-look-like-quantitycounts-at-first-glance." class="section level4">
+<h4>3. The numbers should have a percentage sign next to them. Without it, they look like quantity/counts at first glance.</h4>
+</div>
+</div>
+<div id="reproduce-this-graphic-using-the-diamonds-data-set." class="section level3">
+<h3>2. Reproduce this graphic using the diamonds data set.</h3>
+<p>–</p>
+</div>
+<div id="the-previous-graphic-is-not-very-useful.-we-can-make-it-much-more-useful-by-changing-one-thing-about-it.-make-the-change-and-plot-it-again." class="section level3">
+<h3>3. The previous graphic is not very useful. We can make it much more useful by changing one thing about it. Make the change and plot it again.</h3>
+</div>
+</div>
+<div id="data-munging-and-wrangling-6-points" class="section level2">
+<h2>Data munging and wrangling (6 points)</h2>
+<div id="is-this-data-tidy-if-yes-leave-it-alone-and-go-to-the-next-problem.-if-no-make-it-tidy.-note-this-data-set-is-called-table2-and-is-available-in-the-tidyverse-package.-it-should-be-ready-for-you-to-use-after-youve-loaded-the-tidyverse-package." class="section level4">
+<h4>1. Is this data “tidy”? If yes, leave it alone and go to the next problem. If no, make it tidy. Note: this data set is called table2 and is available in the tidyverse package. It should be ready for you to use after you’ve loaded the tidyverse package.</h4>
+<pre class="r"><code>table2</code></pre>
+<pre><code>## # A tibble: 12 x 4
+##    country      year type            count
+##    &lt;chr&gt;       &lt;int&gt; &lt;chr&gt;           &lt;int&gt;
+##  1 Afghanistan  1999 cases             745
+##  2 Afghanistan  1999 population   19987071
+##  3 Afghanistan  2000 cases            2666
+##  4 Afghanistan  2000 population   20595360
+##  5 Brazil       1999 cases           37737
+##  6 Brazil       1999 population  172006362
+##  7 Brazil       2000 cases           80488
+##  8 Brazil       2000 population  174504898
+##  9 China        1999 cases          212258
+## 10 China        1999 population 1272915272
+## 11 China        2000 cases          213766
+## 12 China        2000 population 1280428583</code></pre>
+</div>
+<div id="create-a-new-column-in-the-diamonds-data-set-called-price_per_carat-that-shows-the-price-of-each-diamond-per-carat-hint-divide.-only-show-me-the-code-not-the-output." class="section level4">
+<h4>2. Create a new column in the diamonds data set called price_per_carat that shows the price of each diamond per carat (hint: divide). Only show me the code, not the output.</h4>
+<p>yo</p>
+</div>
+<div id="for-each-cut-of-diamond-in-the-diamonds-data-set-how-many-diamonds-and-what-proportion-have-a-price-10000-and-a-carat-1.5-there-are-several-ways-to-get-to-an-answer-but-your-solution-must-use-the-data-wrangling-verbs-from-the-tidyverse-in-order-to-get-credit." class="section level4">
+<h4>3. For each cut of diamond in the diamonds data set, how many diamonds, and what proportion, have a price &gt; 10000 and a carat &lt; 1.5? There are several ways to get to an answer, but your solution must use the data wrangling verbs from the tidyverse in order to get credit.</h4>
+<div id="a.-do-the-results-make-sense-why" class="section level5">
+<h5>a. Do the results make sense? Why?</h5>
+</div>
+<div id="b.-do-we-need-to-be-wary-of-any-of-these-numbers-why" class="section level5">
+<h5>b. Do we need to be wary of any of these numbers? Why?</h5>
+</div>
+</div>
+</div>
+<div id="eda" class="section level2">
+<h2>EDA</h2>
+<p>Take a look at the txhousing data set that is included with the ggplot2 package and answer these questions:</p>
+<div id="during-what-time-period-is-this-data-from" class="section level4">
+<h4>1. During what time period is this data from?</h4>
+<p>helo #### 2. How many cities are represented?</p>
+<p>wird</p>
+</div>
+<div id="which-city-month-and-year-had-the-highest-number-of-sales" class="section level4">
+<h4>3. Which city, month and year had the highest number of sales?</h4>
+<p>go</p>
+</div>
+<div id="what-kind-of-relationship-do-you-think-exists-between-the-number-of-listings-and-the-number-of-sales" class="section level4">
+<h4>4. What kind of relationship do you think exists between the number of listings and the number of sales?</h4>
+<p>Check your assumption and show your work.</p>
+</div>
+<div id="what-proportion-of-sales-is-missing-for-each-city" class="section level4">
+<h4>5. What proportion of sales is missing for each city?</h4>
+<p>bingo</p>
+</div>
+<div id="looking-at-only-the-cities-and-months-with-greater-than-500-sales" class="section level4">
+<h4>6. Looking at only the cities and months with greater than 500 sales:</h4>
+<div id="a.-are-the-distributions-of-the-median-sales-price-column-name-median-when-grouped-by-city-different-the-same-show-your-work." class="section level5">
+<h5>a. Are the distributions of the median sales price (column name median), when grouped by city, different? The same? Show your work.</h5>
+</div>
+<div id="b.-any-cities-that-stand-out-that-youd-want-to-investigate-further" class="section level5">
+<h5>b. Any cities that stand out that you’d want to investigate further?</h5>
+</div>
+<div id="c.-why-might-we-want-to-filter-out-all-cities-and-months-with-sales-less-than-500" class="section level5">
+<h5>c. Why might we want to filter out all cities and months with sales less than 500?</h5>
 </div>
 </div>
 </div>
