finished the midterm - woohoo

--- a/midterm/larry_kubin_miderm.html
+++ b/midterm/larry_kubin_miderm.html
@@ -149,6 +149,7 @@ $(document).ready(function () {
 </ul>
 </div>
 
+<p><a href="https://github.com/larrykubin/compscix-415-2-assignments">Github Link</a></p>
 <div id="the-tidyverse-packages" class="section level2">
 <h2>The tidyverse packages</h2>
 <div id="can-you-name-which-package-is-associated-with-each-task-below" class="section level3">
